# jsonformat

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
jsonformat-cli/: Cargo.toml
jsonformat-cli/src/: main.rs
src/: lib.rs  main.rs
