[workspace]
members = [".", "jsonformat-cli"]

[package]
name = "jsonformat"
version = "1.2.0"
authors = ["Nilstrieb <nilstrieb@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Formats JSON extremely fast"
homepage = "https://github.com/Nilstrieb/jsonformat"
repository = "https://github.com/Nilstrieb/jsonformat"
readme = "README.md"
keywords = ["json", "formatting"]
categories = ["parser-implementations"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.3.5"
