[workspace]
members = [".", "jsonformat-cli"]

[package]
name = "jsonformat"
version = "2.0.0"
authors = ["Nilstrieb <nilstrieb@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Formats JSON extremely fast"
homepage = "https://github.com/Nilstrieb/jsonformat"
repository = "https://github.com/Nilstrieb/jsonformat"
readme = "README.md"
keywords = ["json", "formatting"]
categories = ["parser-implementations"]
include = ["src/lib.rs", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md", "benches/bench.rs"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.3.5"
