[package]
name = "jsonformat-cli"
version = "0.2.0"
authors = ["Nilstrieb <nilstrieb@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Formats JSON extremely fast"
homepage = "https://github.com/Nilstrieb/jsonformat"
repository = "https://github.com/Nilstrieb/jsonformat"
readme = "README.md"
keywords = ["json", "formatting", "cli"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonformat = { path = "..", version = "2.0.0" }
clap = { version = "3.1.12", features = ["derive"] }
anyhow = "1.0.57"

[[bin]]
name = "jsonformat"
path = "src/main.rs"
